fix: Java 17 compatibility and validation enhancements
- Replace Executors.newVirtualThreadPerTaskExecutor() with newCachedThreadPool() for Java 17 compatibility
- Fix type mismatch in MessageDeliveryDbRepository (MemberDbRepository -> MemberJpaRepository)
- Add validation annotations to DTOs and controllers (@Valid, @NotNull, @Size, @Email, etc.)
- Add GlobalExceptionHandler for validation error responses
- Add validation for path variables (@Positive) and request bodies
- Update documentation in docs/ folder